deployment/trino/kustomize/base/deployment-manifest/sso-bk/deployment-trino-coordinator.yaml
apiVersion: apps/v1
kind: Deployment
  labels:
    app.kubernetes.io/part-of: trino
  name: trino-coordinator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trino
  strategy:
    type: Recreate
  template:
      labels:
        app: trino
    spec:
      containers:
      - env:
        - name: AWS_ACCESS_KEY_ID
          valueFrom:
            secretKeyRef:
              key: minio-access-key
              name: trino-secrets
        - name: AWS_SECRET_ACCESS_KEY
          valueFrom:
            secretKeyRef:
              key: minio-secret-key
              name: trino-secrets
        - name: OIDC_ISSUER
          value: https://keycloak-os-climate.apps.osc-cl4.apps.os-climate.org/realms/KeycloakRealm
        - name: OAUTH_AUTHORIZE_URL
          value: https://keycloak-os-climate.apps.osc-cl4.apps.os-climate.org/realms/KeycloakRealm/protocol/openid-connect/auth
        - name: OAUTH_TOKEN_URL
          value: https://keycloak-os-climate.apps.osc-cl4.apps.os-climate.org/realms/KeycloakRealm/protocol/openid-connect/token
        - name: JWKS_URI
          value: https://keycloak-os-climate.apps.osc-cl4.apps.os-climate.org/realms/KeycloakRealm/protocol/openid-connect/certs
        - name: TRINO_OAUTH_SECRET
          value: 0qKI9CbGy5Hd8P6vPa2U81k7OfnKicDU
        - name: INTER_COMM_SHARED_SECRET
          value: kzs71nsYBRr8cysT62zb6P+VT8YsVi/eASfNKUJkvPDce6aof6FLyM/0EDA8qK46P8sD2jXBTTe7cKX0MEqTS2UNZ7YdYWHUUoSG2nLgEryZbqlEkguYWs2dSSYkzv9DIPMtRvGxmNdQ6HGGscrqsFkeK7kSCd6mn5YNskIv6Z665gquqq+SlqV5UylFDcXhB6Z7oWuZ2fq3WONVWtTIhYP73YO8iDORG2afkqPQhRKTw848YQVrcqKAIOX6sirMb5KE1BP0yXz533J71vFuMqkvTBrFV3lkvAq+/7W4iA9Xn9WDJ8TGgcwB7jFOLH9htKYrXtO2XgMsWxizi7XbFzXsPEreqndhZEX7i6U0/K22kCWRy7/lcH+JMQAzq3J+qxl1KqTLVTfu3iSIKUj093/wR0EPcH282a+HMzk/5E1aGk3uV40M/1wQwlEDzBRaGtLtW7tyFHX+sc29nLgkOFAPknwqnYoSR7F [...]
        image: trinodb/trino
        imagePullPolicy: Always
        name: trino
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/trino
          name: config-volume
        - mountPath: /etc/trino/catalog
          name: catalog-volume
        - mountPath: /etc/trino/schemas
          name: schemas-volume
        - mountPath: /etc/trino/truststore
          name: truststore-volume
        - mountPath: /etc/trino/keystore
          name: keystore-volume
        - mountPath: /etc/trino/keystore-p12
          name: keystore-p12-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: trino-configs
        name: config-volume
      - configMap:
          defaultMode: 420
          name: trino-catalog
        name: catalog-volume
      - configMap:
          defaultMode: 420
          name: schemas-volume-coordinator
        name: schemas-volume
      - name: truststore-volume
        secret:
          defaultMode: 420
          items:
          - key: truststore.jks
            path: truststore.jks
          secretName: truststore
      - name: keystore-volume
        secret:
          defaultMode: 420
          items:
          - key: keystore.jks
            path: keystore.jks
          secretName: keystore
      - name: keystore-p12-volume
        secret:
          defaultMode: 420
          items:
          - key: trino.p12
            path: trino.p12
          secretName: keystore-p12
